# xml-extractor

./: README.md  pyproject.toml
xml_extractor/: __init__.py  core.py
